css: fix missing background

--- a/src/components/collage.css
+++ b/src/components/collage.css
@@ -56,6 +56,7 @@ table {
   table-layout: fixed;
   border-collapse: collapse;
   margin: 3em auto;
+  background-color: #f1f2f2;
 }
 
 .pad-1 {
